packages/cashier/src/Sass/cashier.scss
/* ... */
/** @define max-turnover */
.max-turnover {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 47rem;
    margin: 4rem auto 0;

    &__title {
        margin-bottom: 3.2rem;
    }
    &__desc {
        @include typeface(--paragraph-center-normal-black);
        margin-bottom: 3.2rem;
        margin-top: 2rem;
    }
    &__form {
        display: flex;
        flex-direction: column;
    }
    &__button {
        width: fit-content;
        align-self: flex-end;
    }
    @include mobile {
        &__form {
            width: calc(100% - 2.4rem);
        }
        &__button {
            align-self: center;
            width: auto;
            min-width: 9rem;
        }
    }
}

/** @define cashier-locked */
.cashier-locked {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 67.2rem;
    margin: 4rem auto 0;

    /* stylelint-disable-next-line plugin/selector-bem-pattern */
    .dc-checklist {
        width: 100%;
        max-width: 500px;
    }
    /* stylelint-disable-next-line plugin/selector-bem-pattern */
    .dc-checklist__item-text {
        max-width: 320px;
    }
    &__icon {
        width: 12.8rem;
        height: 12.8rem;
        margin-bottom: 2.4rem;
    }
    &__title {
        margin-bottom: 0.8rem;
        @include mobile {
            margin-left: 1.2rem;
            margin-right: 1.2rem;
        }
    }
    &__desc {
        margin-bottom: 3.2rem;
    }
    @include mobile {
        &__desc {
            padding: 0 1rem;
        }
    }
}

/** @define withdraw */
.withdraw {
    &__header {
        margin-bottom: 8px;
    }

    &__verify-button {
        margin: 3.2rem auto;
    }
    &__icon {
        margin-top: 8rem;
        margin-bottom: 1.6rem;
    }
    &__resend {
        &-button {
            margin: 4rem auto 0;

            @include mobile {
                width: 100%;
            }
        }
    }
    &__email {
        &-sent {
            max-width: 40rem;
            width: 100%;
            margin: auto;

            &-title {
                margin-bottom: 0.8rem;
            }

            @include mobile {
                width: 100%;
                padding: 1.6rem 0;
            }
        }
        &-resend {
            margin-top: 4rem;

            &-text {
                color: var(--brand-red-coral);
                font-weight: bold;
                text-decoration: none;
                cursor: pointer;
            }
            @include mobile {
                margin-top: 1.6rem;
            }
        }
    }

    &__send-email {
        &--space {
            margin-bottom: 1rem;
        }
    }
}

.crypto-fiat-converter-form {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    grid-gap: 0.8rem;
    align-items: center;
    @include desktop {
        max-width: 36rem;
        margin: 0 auto 2.4rem;
        .dc-input {
            margin-bottom: unset;
        }
    }
    @include mobile {
        display: flex;
        flex-direction: column;
        fieldset {
            width: 100%;
        }
        .dc-input {
            margin-bottom: 1rem;
        }
        .dc-icon {
            margin: 1.4rem;
        }
    }
    &__text {
        margin-top: 0.6rem;
    }
    .input-group {
        display: flex;
        .timer {
            margin-top: 1rem;
            margin-left: -4rem;
            color: var(--text-less-prominent);
        }
    }
    .dc-input__hint {
        .dc-text {
            margin-left: 0;
        }
    }
    .dc-text {
        grid-column: 3;
        margin-left: 1rem;
        color: var(--text-less-prominent);
        align-self: start;
    }
}
/* ... */

